--- a/platformio.ini
+++ b/platformio.ini
@@ -18,13 +18,13 @@ lib_deps =
 	seeed-studio/Grove - LCD RGB Backlight@^1.0.0
 	spacehuhn/SimpleCLI@^1.1.4
 
-build_type = debug
+# build_type = debug
 
 build_flags = 
-	'-D STANDARD_LCD=1'
-    '-DC_ENABLE_LOG_LEVEL=C_LOG_INFO'
+	'-DSTANDARD_LCD=1'
+    '-DC_ENABLE_LOG_LEVEL=C_LOG_DEBUG'
 
-[env:uno]
+[env:uno] 
 platform = atmelavr
 board = uno
 framework = arduino
@@ -37,6 +37,6 @@ lib_deps =
 build_type = debug
 
 build_flags = 
-	'-D GROVE_LCD=1'
-    '-DC_ENABLE_LOG_LEVEL=C_LOG_INFO'
+	'-DSTANDARD_LCD=1'
+    '-DC_ENABLE_LOG_LEVEL=C_LOG_DEBUG'
 
