--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,8 @@ lib_deps =
 
 build_flags = 
 	'-DSTANDARD_LCD=1'
-    '-DC_ENABLE_LOG_LEVEL=C_LOG_DEBUG'
+    '-DC_ENABLE_LOG_LEVEL=C_LOG_NOTICE'
+	'-DNEGATIVE_OUTPUT_LOGIC=1'
 
 [env:uno] 
 platform = atmelavr
@@ -37,6 +38,7 @@ lib_deps =
 build_type = debug
 
 build_flags = 
-	'-DSTANDARD_LCD=1'
-    '-DC_ENABLE_LOG_LEVEL=C_LOG_DEBUG'
+	'-DGROVE_LCD=1'
+    '-DC_ENABLE_LOG_LEVEL=C_LOG_NOTICE'
+	'-DNEGATIVE_OUTPUT_LOGIC=1'
 
